--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "main": "src/server.js",
   "scripts": {
     "dev": "nodemon ./src/server.ts",
-    "build": "tsc ./src/server.ts",
+    "build": "tsc --project .",
     "start": "ts-node ./src/server.ts",
     "lint": "eslint --ext .js,.ts --fix src/",
     "test": "cross-env DEBUG=rs:* jest --testMatch \"<rootDir>/test/e2e/test/*.test.js\" --noStackTrace --runInBand",
