--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,16 +3,30 @@ services:
     node:
       build: .
       ports: 
-        - "8080:8080"
+        - ${PORT}:${PORT}
       depends_on:
         - postgres
       environment: 
-        - PORT=8080
+        - PORT=${PORT}
+      volumes:
+        - /app/node_modules
+        - .:/app
+      restart: always
+      networks:
+        - mynetwork
     postgres:
       build: ./database/
+      volumes:
+        - ./postgre:/var/lib/postgresql/data
       ports:
         - ${POSTGRES_PORT}:${POSTGRES_PORT}
+      restart: always
+      networks:
+        - mynetwork
       environment: 
         POSTGRES_USER: ${POSTGRES_USER}
         POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
         POSTGRES_DB: ${POSTGRES_DB}
+networks:
+  mynetwork:
+    driver: bridge
