fix: fix run dev in package.json

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,7 @@ services:
       environment: 
         - PORT=${PORT}
       volumes:
-        - /app/node_modules
-        - .:/app
+        - ./src:/usr/app/src
       restart: always
       networks:
         - mynetwork
