--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@types/yamljs": "^0.2.31",
     "@typescript-eslint/eslint-plugin": "^4.25.0",
     "chai": "4.3.4",
+    "cors": "^2.8.5",
     "debug": "4.3.1",
     "dirty-chai": "2.0.1",
     "eslint": "7.2.0",
@@ -71,13 +72,16 @@
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-prettier": "3.4.0",
+    "http-status-codes": "^2.1.4",
     "husky": "4.3.8",
     "jest": "26.6.3",
     "lint-staged": "10.5.4",
     "nodemon": "2.0.7",
+    "pg": "^8.6.0",
     "prettier": "2.2.1",
     "supertest": "6.1.3",
     "ts-node": "^10.0.0",
+    "typeorm": "^0.2.34",
     "typescript": "^4.3.2"
   }
 }
