--- a/.env
+++ b/.env
@@ -4,7 +4,12 @@ AUTH_MODE=false
 JWT_SECRET_KEY=secret-key
 # Set your database connection information here
 MONGO_CONNECTION_STRING=your-mongo-db-connection-string
-POSTGRES_PORT=5432
+DB_HOST=localhost
+DB_PORT=5433
+DB_USERNAME=postgres
+DB_PASSWORD=postgres
+DB_NAME=testdb
+POSTGRES_PORT=5433
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=postgres
