--- a/.env
+++ b/.env
@@ -1,15 +1,15 @@
 NODE_ENV=development
-PORT=8080
+PORT=8090
 AUTH_MODE=false
 JWT_SECRET_KEY=secret-key
 # Set your database connection information here
 MONGO_CONNECTION_STRING=your-mongo-db-connection-string
 DB_HOST=localhost
-DB_PORT=5433
+DB_PORT=5432
 DB_USERNAME=postgres
-DB_PASSWORD=postgres
-DB_NAME=testdb
-POSTGRES_PORT=5433
+DB_PASSWORD=54321
+DB_NAME=trello_db
+POSTGRES_PORT=5432
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=postgres
