--- a/.env
+++ b/.env
@@ -4,12 +4,15 @@ AUTH_MODE=false
 JWT_SECRET_KEY=secret-key
 # Set your database connection information here
 MONGO_CONNECTION_STRING=your-mongo-db-connection-string
-DB_HOST=localhost
+DB_HOST=postgres
 DB_PORT=5432
 DB_USERNAME=postgres
 DB_PASSWORD=54321
 DB_NAME=trello_db
+POSTGRES_HOST=host.docker.internal
 POSTGRES_PORT=5432
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=postgres
+PGADMIN_DEFAULT_PASSWORD='password1234'
+PGADMIN_DEFAULT_EMAIL='postgres@test.com'
