--- a/.env
+++ b/.env
@@ -1,15 +1,15 @@
 NODE_ENV=development
-PORT=8090
+PORT=8080
 AUTH_MODE=false
 JWT_SECRET_KEY=secret-key
 # Set your database connection information here
 MONGO_CONNECTION_STRING=your-mongo-db-connection-string
-DB_HOST=postgres
+DB_HOST=localhost
 DB_PORT=5432
 DB_USERNAME=postgres
 DB_PASSWORD=54321
 DB_NAME=trello_db
-POSTGRES_HOST=host.docker.internal
+POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
