--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3'
 services:
     node:
       build: .
+      image: daniluk666/nodejs-express
       ports: 
         - ${PORT}:${PORT}
       depends_on:
@@ -15,9 +16,9 @@ services:
         - mynetwork
     postgres:
       build: ./database/
-      image: denzeldocker/docker-postgres
       # volumes:
       #   - ./postgre:/var/lib/postgresql/data
+      image: daniluk666/postgress
       ports:
         - ${POSTGRES_PORT}:${POSTGRES_PORT}
       restart: always
