--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "lint": "eslint --ext .js,.ts --fix src/",
     "test": "cross-env DEBUG=rs:* jest --testMatch \"<rootDir>/test/e2e/test/*.test.js\" --noStackTrace --runInBand",
     "test:auth": "cross-env DEBUG=rs:* TEST_MODE=auth jest --noStackTrace",
-    "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js"
+    "migration:generate": "npx ts-node ./node_modules/typeorm/cli.js --config=src/common/ormconfig.ts migration:generate -n Trello_db"
   },
   "keywords": [
     "rs",
