--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,10 +6,19 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
-    "target": "es2017",
+    "target": "es2020",
     "sourceMap": true,
     "outDir": "./dist",
-    "baseUrl": "./nest-js-example",
-    "incremental": true
-  }
+    "baseUrl": "./src",
+    "incremental": true,
+    "noImplicitReturns": true,
+    "moduleResolution": "node",
+    "esModuleInterop": true
+  },
+  "exclude": [
+    "node_modules/"
+  ],
+  "include": [
+    "./src/**/*.ts"
+, "src/middlewares/logger.requeststs"  ]
 }
