--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ NODE_ENV=development
 PORT=8080
 AUTH_MODE=false
 JWT_SECRET_KEY=secret-key
-USE_FASTIFY=true
+USE_FASTIFY=false
 # Set your database connection information here
 # Local database
 DB_HOST=localhost
